[package]
name = "solana-pinocchio-starter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pinocchio = "=0.8.3"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
pinocchio-token = "0.3.0"
shank = "0.4.2"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
bs58 = "0.5.1"

[dev-dependencies]
solana-sdk = "2.1.0"
mollusk-svm = "0.1.4"
spl-token = "8.0.0"
mollusk-svm-bencher = "0.1.4"
bincode = "1.3.3"
serde = "1.0.213"
serde_derive = "1.0.213"


[features]
logging = []
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]
bench-default = ["no-entrypoint", "std"]

[[bench]]
name = "compute_units"
harness = false
